GroupMapperEntityToDTOTest done